build(cgi-bin): require websockify on server VM hosts in specfile

--- a/anvil.spec.in
+++ b/anvil.spec.in
@@ -162,6 +162,7 @@ Requires:       qemu-kvm
 Requires:       qemu-kvm-core 
 Requires:       virt-install
 Requires:       virt-top
+Requires:       python3-websockify
 # A node is allowed to host servers and be a live migration target. It is not 
 # allowed to host a database or be a DR host.
 Conflicts:      anvil-striker
@@ -190,6 +191,7 @@ Requires:       qemu-kvm
 Requires:       qemu-kvm-core 
 Requires:       virt-install
 Requires:       virt-top
+Requires:       python3-websockify
 # A DR host is not allowed to be a live-migration target or host a database.
 Conflicts:	anvil-striker
 Conflicts:	anvil-node
